--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     </div>
     <div class="content">
         <h1>Pidjon Enterprises</h1>
+        <p class="subtitle">Robotics with <strong>personality.</strong></p>
+        <p>We are a team of four 12-year-olds designing friendly, intelligent robots that interact with people.</p>
+        <p>Our goal is to bring robotics to every household, and to make robots something you're friends with, not afraid of.</p>
     </div>
 </body>
 </html>
