--- a/about-us/index.html
+++ b/about-us/index.html
@@ -11,15 +11,19 @@
     <div class="header">
         <img src="/logo/transparent/text + logomark-cropped.png" class="logo"/>
         <nav class="nav">
-            <a href="index.html">Home</a>
+            <a href="/">Home</a>
             <a href="/about-us/">About Us</a>
         </nav>
     </div>
     <div class="content">
-        <h1>Pidjon Enterprises</h1>
-        <p class="subtitle">Robotics with <strong>personality.</strong></p>
+        <h1>About Us</h1>
         <p>We are a team of four 12-year-olds designing friendly, intelligent robots that interact with people.</p>
-        <p>Our goal is to bring robotics to every household, and to make robots a friend, not a foe.</p>
+
+        <h2>Our Team</h2>
+        <p>Arslaan: Lead Developer</p>
+        <p>George: Lead Engineer</p>
+        <p>Alex: Developer, Engineer</p>
+        <p>Samuel: Personality Designer/Robot Therapist</p>
     </div>
 </body>
 </html>
