--- a/about-us/index.html
+++ b/about-us/index.html
@@ -20,10 +20,10 @@
         <p>We are a team of four 12-year-olds designing friendly, intelligent robots that interact with people.</p>
 
         <h2>Our Team</h2>
-        <p>Arslaan: Lead Developer</p>
-        <p>George: Lead Engineer</p>
-        <p>Alex: Developer, Engineer</p>
-        <p>Samuel: Personality Designer/Robot Therapist</p>
+        <p>Arslaan Pathan: Chief Executive Officer / Project Lead / Lead Developer</p>
+        <p>Alex Smith: Developer / Engineer / Lead CSS styling engineer</p>
+        <p>George Alley: Lead Engineer</p>
+        <p>Samuel Lawson: Robot Therapist / Lead Personality Engineer / Marketing Lead</p>
     </div>
 </body>
 </html>
